force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationActionProvider__c/Apttus_Base2__UIComponentConfigurationActionProvider__c.object-meta.xml
<CustomObject>
    <label>Configuration Action Provider</label>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Action Providers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>