force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationActionProvider__c/fields/Apttus_Base2__Configuration__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__Configuration__c</fullName>
    <label>Configuration</label>
    <referenceTo>Apttus_Base2__UIComponentConfiguration__c</referenceTo>
    <relationshipLabel>Configuration</relationshipLabel>
    <relationshipName>Configuration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>