force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationActionProvider__c/fields/Apttus_Base2__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>90</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>