force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationActionProvider__c/fields/Apttus_Base2__ProviderId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__ProviderId__c</fullName>
    <label>Action Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Apttus_Base2__UIComponentProvider__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Action</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Apttus_Base2__UIComponentProvider__c</referenceTo>
    <relationshipLabel>Action Provider</relationshipLabel>
    <relationshipName>ActionProvider</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>