force-app/main/default/objects/Apttus_Base2__UIComponentConfigurationActionProvider__c/listViews/Apttus_Base2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Base2__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Base2__ProviderId__c</columns>
    <columns>Apttus_Base2__Configuration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Configuration Action Providers</label>
</ListView>